feat: implement video recommendations feature with UI enhancements and developer workflow improvements, updated docs

--- a/client/src/app/playlist-panel/playlist-panel.html
+++ b/client/src/app/playlist-panel/playlist-panel.html
@@ -29,10 +29,10 @@
         cdkDrag
       >
         <span class="drag-handle" cdkDragHandle>⠿</span>
-        @if (item.thumbnailUrl) {
+        @if (thumbnailFor(item); as thumb) {
           <img
             class="thumbnail"
-            [src]="item.thumbnailUrl"
+            [src]="thumb"
             [alt]="displayTitle(item)"
           />
         }
