--- a/client/src/app/watch-room/watch-room.scss
+++ b/client/src/app/watch-room/watch-room.scss
@@ -1,7 +1,14 @@
+:host {
+  display: flex;
+  flex-direction: column;
+}
+
 .watch-room {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  flex: 1;
+  min-height: 0;
+  overflow: hidden;
 }
 
 .toolbar {
@@ -95,6 +102,11 @@
   app-youtube-player {
     flex: 1;
     min-height: 0;
+    position: relative;
+  }
+
+  app-video-controls {
+    flex-shrink: 0;
   }
 }
 
