--- a/client/src/app/join-room/join-room.scss
+++ b/client/src/app/join-room/join-room.scss
@@ -1,9 +1,20 @@
+:host {
+  display: flex;
+  flex-direction: column;
+}
+
 .center-container {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   padding: 1rem;
+}
+
+app-watch-room {
+  flex: 1;
+  min-height: 0;
+  overflow: hidden;
 }
 
 .card {
