--- a/client/src/app/user-menu/user-menu.scss
+++ b/client/src/app/user-menu/user-menu.scss
@@ -5,7 +5,16 @@
   padding: 0.5rem 1rem;
   background: #181825;
   border-bottom: 1px solid #313244;
-  justify-content: flex-end;
+}
+
+.home-link {
+  color: #cdd6f4;
+  font-weight: 600;
+  font-size: 0.95rem;
+  margin-right: auto;
+  text-decoration: none;
+  &:hover { color: #89b4fa; text-decoration: none; }
+  &:visited { color: #cdd6f4; }
 }
 
 .display-name {
