--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -17,3 +17,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
 }
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+}
+
+app-root > app-user-menu {
+  flex-shrink: 0;
+}
+
+app-root > router-outlet + * {
+  flex: 1;
+  min-height: 0;
+  overflow: hidden;
+}
